# ros_practive

day2_ws/devel/: .catkin  .rosinstall
day2_ws/devel/lib/pkgconfig/: auto_py.pc  timer_rotate_py.pc
day2_ws/devel/share/auto_py/cmake/: auto_pyConfig.cmake
day2_ws/devel/share/timer_rotate_py/cmake/: timer_rotate_pyConfig.cmake
day2_ws/src/auto_py/: CMakeLists.txt  package.xml
day2_ws/src/auto_py/scripts/: main.py
day2_ws/src/timer_rotate_py/: CMakeLists.txt  package.xml
day2_ws/src/timer_rotate_py/scripts/: main.py
