<?xml version="1.0"?>
<package format="2">
  <name>timer_rotate_py</name>
  <version>0.0.0</version>
  <description>The timer_rotate_py package</description>

  <maintainer email="ryuzot@todo.todo">ryuzot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>歯抜け1</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>歯抜け1</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>歯抜け1</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
